--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@keyframes fade-in { from { opacity: 0; } to { opacity: 1; } }
+.fade-in { animation: fade-in 0.5s; }
+
 body { font-family: 'IBM Plex Mono', monospace; background-color: #fdfdfd; color: #313131; }
 
 a {
@@ -10,3 +13,5 @@ a {
     border-bottom: 1px solid transparent;
 }
 a:hover{ color: #5c5fb1; border-color: #3d3f80; }
+
+ul li { word-wrap: break-word; }
