--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,24 @@ body { font-family: 'IBM Plex Mono', monospace; background-color: #fdfdfd; color
 
 a {
     color: #4e5192;
-    transition: all .06s ease-in-out;
     text-decoration: none;
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
-    border-bottom: 1px solid transparent;
+    background-image: linear-gradient(0deg,
+        transparent,
+        transparent 50%,
+        rgba(0, 158, 224, 0.1) 0,
+        rgba(0, 158, 224, 0.1));
+    background-position: 0 -100%;
+    background-size: 100% 200%;
+    transition-property: color, background-position;
+    transition-duration: 150ms;
+    transition-timing-function: ease-in;
 }
-a:hover{ color: #5c5fb1; border-color: #3d3f80; }
+
+a:hover,
+a:focus {
+    color: #5c5fb1;
+    background-position: 0 0;
+    box-shadow: 0 1px 0 #5c5fb1;
+}
 
 ul li { word-wrap: break-word; }
