--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet"> 
     <link rel="stylesheet" href="{{ get_url(path="css/basscss.min.css") }}">
     <link rel="stylesheet" href="{{ get_url(path="css/main.css") }}">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>
         {% if section.title %}
             {{ section.title }}
