--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -26,3 +26,30 @@ a:focus {
 }
 
 ul li { word-wrap: break-word; }
+.light-subdue { color: #9b9b9b; }
+img { max-width: 100%; height: auto; }
+pre { padding: 2em; overflow-x: auto; }
+
+.page-content p,
+.page-content ul,
+.page-content table {
+    font-family: 'Georgia', serif;
+    font-size: 19px;
+    line-height: 28.5px;
+}
+
+@media (max-width: 768px) {
+    .page-content p,
+    .page-content ul,
+    .page-content table {
+        font-size: 16px;
+        line-height: 24.5px;
+    }
+}
+
+.page-content img {
+    max-width: 75%;
+    display: block;
+    margin: 2em auto 2em auto;
+    border: 3px solid #dedede;
+}
