--- a/static/css/main.css
+++ b/static/css/main.css
@@ -53,3 +53,5 @@ pre { padding: 2em; overflow-x: auto; }
     margin: 2em auto 2em auto;
     border: 3px solid #dedede;
 }
+
+hr { border: 0; border-top: 1px solid #dedede; }
