--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="controls px1">
+        <a href="https://keb.netlify.com/admin/">admin</a>
+    </div>
+
     <div class="flex flex-wrap">
         <div class="col col-12 md-col-3">
             <img src="{{ get_url(path="img/pic.jpg") }}" alt="pic" class="rounded">
         </div>
         <div class="col col-12 md-col-3">
             <h2 class="p0 my1">keb</h2>
-            <span>writes code & plays games.</span>
+            <span>videogame politician</span>
             <p>contact: <a href="mailto:keb@disroot.org">keb@disroot.org</a></p>
         </div>
         <div class="col col-12 md-col-6">
