add prose.io link

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="controls px1">
         <a href="https://keb.netlify.com/admin/">admin</a>
+        <a href="http://prose.io/#keb/keb.now.sh/tree/master/content">prose.io</a>
     </div>
 
     <div class="flex flex-wrap">
