--- a/static/css/main.css
+++ b/static/css/main.css
@@ -55,5 +55,5 @@ pre { padding: 2em; overflow-x: auto; }
 }
 
 hr { border: 0; border-top: 1px solid #dedede; }
-.controls { position: absolute; top: 0; right: 0; opacity: 0; }
+.controls { position: fixed; top: 0; right: 0; opacity: 0; }
 .controls:hover { opacity: 1; }
