remove netlify cms

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="controls px1">
+        <a href="http://prose.io/#keb/keb.now.sh/edit/master/content/{{ page.slug }}.md">edit</a>
+    </div>
     <p class="h4">
         <a href="/">keb.now.sh</a>
     </p>
