--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="controls px1">
-        <a href="http://prose.io/#keb/keb.now.sh/tree/master/content">prose.io</a>
+        <a href="https://github.com/keb/keb.now.sh/tree/master/content">github</a>
     </div>
 
     <div class="flex flex-wrap">
