--- a/templates/page.html
+++ b/templates/page.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="controls px1">
-        <a href="http://prose.io/#keb/keb.now.sh/edit/master/content/{{ page.slug }}.md">edit</a>
+        <a href="https://github.com/keb/keb.now.sh/edit/master/content/{{ page.slug }}.md">edit</a>
     </div>
     <p class="h4">
         <a href="/">keb.now.sh</a>
