update html5 semantics and css changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,9 @@
         {% endif %}
     </title>
 </head>
-<body class="fade-in max-width-3 mx-auto py3 px3">
-    {% block content %}{% endblock content %}
+<body>
+    <main class="fade-in max-width-3 mx-auto">
+        {% block content %}{% endblock content %}
+    </main>
 </body>
 </html>
