--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,7 @@
 .fade-in { animation: fade-in 0.25s; }
 
 body { font-family: 'IBM Plex Mono', monospace; background-color: #fdfdfd; color: #313131; }
+main { padding: 2em; }
 
 a {
     color: #4e5192;
@@ -28,7 +29,13 @@ a:focus {
 ul li { word-wrap: break-word; }
 .light-subdue { color: #9b9b9b; }
 img { max-width: 100%; height: auto; }
+
 pre { padding: 2em; overflow-x: auto; }
+code:not([class]) { font-size: 16px; background: #363636; color: white; padding: 0.15em 0.3em; margin: 0 0.2em; }
+
+.page-content h1 {
+    font-size: 2em;
+}
 
 .page-content p,
 .page-content ul,
@@ -39,16 +46,18 @@ pre { padding: 2em; overflow-x: auto; }
 }
 
 @media (max-width: 768px) {
+    main { padding: 0.9em; }
+
     .page-content p,
     .page-content ul,
     .page-content table {
         font-size: 16px;
-        line-height: 24.5px;
+        line-height: 26.5px;
     }
 }
 
 .page-content img {
-    max-width: 75%;
+    max-width: 85%;
     display: block;
     margin: 2em auto 2em auto;
     border: 3px solid #dedede;
