--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,19 @@
 @keyframes fade-in { from { opacity: 0; } to { opacity: 1; } }
 .fade-in { animation: fade-in 0.25s; }
 
-body { font-family: 'IBM Plex Mono', monospace; background-color: #fdfdfd; color: #313131; }
+body {
+    font-family: 'IBM Plex Mono', monospace;
+    background-color: #fdfdfd;
+    color: #313131;
+}
+
 main { padding: 2em; }
+
+.line {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid #dedede;
+}
 
 a {
     color: #4e5192;
