--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,20 @@
         <a href="https://github.com/keb/keb.now.sh/new/master/content">new</a>
     </div>
 
-    <header class="flex flex-wrap">
+    <header class="flex flex-wrap items-center justify-between">
         <div class="col col-12 md-col-3">
             <img src="{{ get_url(path="img/pic.jpg") }}" alt="pic" class="rounded">
         </div>
         <div class="col col-12 md-col-3">
-            <h2 class="p0 my1">keb</h2>
-            <span>videogame politician</span>
-            <p>contact: <a href="mailto:keb@disroot.org">keb@disroot.org</a></p>
+            <h2 class="p0 m0">keb</h2>
+            <a href="mailto:keb@disroot.org">keb@disroot.org</a>
+            <br />
+            <a href="https://discordapp.com/">keb#2245</a>
+            <br />
+            <br />
+            <a href="/wishlist">wishlist</a>
+            <br />
+            <a href="/backlog-of-games">backlog</a>
         </div>
         <div class="col col-12 md-col-6">
             <ul>
@@ -26,7 +32,7 @@
         </div>
     </header>
 
-    <div class="my2" style="border-bottom: 1px solid #dedede;"></div>
+    <div class="line"></div>
 
     {% for post in paginator.pages %}
         <article>
