absolute position darkmode container

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     </title>
 </head>
 <body>
-    <div>
+    <div class="dark-mode-container">
           <input style="display: none;" type="checkbox" id="darkSwitch" />
           <label class="dark-mode-btn" for="darkSwitch">🌒</label>
     </div>
