--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -1,3 +1,10 @@
+.dark-mode-container {
+    position: abosolute;
+    top: 0;
+    left: 0;
+    padding: 0.5em;
+}
+
 .dark-mode-btn {
     opacity: 20%;
 }
