--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <br />
             <a href="/wishlist">wishlist</a>
             <br />
-            <a href="/backlog-of-games">backlog</a>
+            <a href="/backlog">backlog</a>
         </div>
         <div class="col col-12 md-col-6">
             <ul>
