--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -1,8 +1,8 @@
 .dark-mode-container {
-    position: absolute;
     top: 0;
     left: 0;
-    padding: 0.5em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
 }
 
 .dark-mode-btn {
