--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
             <img src="{{ get_url(path="img/pic.jpg") }}" alt="pic" class="rounded">
         </div>
         <div class="col col-12 md-col-3">
-            <h2 class="p0 m0">keb</h2>
+            <h2 class="keb-header p0 m0" title="Discord ID">
+                keb<small class="discord-tag">#2245</small>
+            </h2>
             <a href="mailto:keb@disroot.org">keb@disroot.org</a>
-            <br />
-            <a href="https://discordapp.com/">keb#2245</a>
             <br />
             <br />
             <a href="/wishlist">wishlist</a>
