switching to listenbrainz

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <li><a href="https://mas.to/@keb">mas.to/@keb</a></li>
                 <li><a href="https://github.com/keb">github.com/keb</a></li>
                 <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
-                <li><a href="https://last.fm/user/kebfm">last.fm/user/kebfm</a></li>
+                <li><a href="https://listenbrainz.org/user/keb">listenbrainz.org/user/keb</a></li>
                 <li><a href="https://www.gog.com/u/kebg">gog.com/u/kebg</a></li>
                 <li><a href="https://steamcommunity.com/id/kebsteam">steamcommunity.com/id/kebsteam</a></li>
             </ul>
