--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="plumber killer" >
     <link rel="shortcut icon" href="{{ get_url(path="img/favicon.png") }}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet"> 
     <link rel="stylesheet" href="{{ get_url(path="css/basscss.min.css") }}">
     <link rel="stylesheet" href="{{ get_url(path="css/dark-mode.css") }}">
     <link rel="stylesheet" href="{{ get_url(path="css/main.css") }}">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
     <title>
         {% if section.title %}
             {{ section.title }}
