--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <h2 class="keb-header p0 m0" title="Discord ID">
                 keb<small class="discord-tag">#2245</small>
             </h2>
-            <a href="mailto:keb@disroot.org">keb@disroot.org</a>
+            <a href="mailto:keb@sheev.net">keb@sheev.net</a>
             <br />
             <br />
             <a href="/wishlist">wishlist</a>
