--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,7 +59,7 @@ code:not([class]) { font-size: 16px; background: #363636; color: white; padding:
 .page-content p,
 .page-content ul,
 .page-content table {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Georgia", serif;
     font-size: 17px;
     line-height: 28.5px;
 }
