--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -25,7 +25,7 @@
 [data-theme="dark"] a:hover,
 [data-theme="dark"] a:focus {
     color: #e1e1e1;
-    box-shadow: 0 1px 0 #e1e1e1;
+    box-shadow: 0 1px 0 #dfd0d0;
 }
 
 [data-theme="dark"] .line {
