--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -1,6 +1,7 @@
 .dark-mode-container {
+    position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
 }
