--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -2,8 +2,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    padding: 0.5em;
 }
 
 .dark-mode-btn {
