--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="controls px1">
+    <div class="controls p1">
         <a href="https://github.com/keb/keb.now.sh/new/master/content">new</a>
     </div>
 
