--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="controls px1">
+    <div class="controls p1">
         <a href="https://github.com/keb/keb.now.sh/edit/master/content/{{ page.slug }}.md">edit</a>
     </div>
     <header class="h4 py2">
