--- a/templates/page.html
+++ b/templates/page.html
@@ -10,7 +10,48 @@
     <small class="h5 p0 m0 light-subdue">
         {{ page.date | date(format="%B %d, %Y", timezone="America/New_York") }}
     </small>
+
+    <div class="toc h5 py1">
+        {% for h1 in page.toc %}
+            <div class="toc-header pb1">
+                <div class="h3">{{ h1.title }}</div>
+                <span class="light-subdue">table of contents</span>
+            </div>
+            {% if h1.children %}
+                <ul>
+                    {% for h2 in h1.children %}
+                        <li>
+                            <a href="#{{h2.id | safe}}" title="{{ h2.title }}">{{ h2.title }}</a>
+                            {% if h2.children %}
+                                <ul>
+                                    {% for h3 in h2.children %}
+                                        <li>
+                                            <a href="#{{h3.id | safe}}" title="{{ h3.title }}">{{ h3.title }}</a>
+
+                                            {% if h3.children %}
+                                                <ul>
+                                                    {% for h4 in h3.children %}
+                                                        <li>
+                                                            <a href="#{{h4.id | safe}}" title="{{ h4.title }}">{{ h4.title }}</a>
+                                                        </li>
+                                                    {% endfor %}
+                                                </ul>
+                                            {% endif %}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endfor %}
+    </div>
+
     <article class="page-content">
         {{ page.content | safe }}
     </article>
+    <footer class="py2">
+        <a href="#">return to top</a>
+    </footer>
 {% endblock content %}
