--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             <a href="/backlog">backlog</a>
         </div>
         <div class="col col-12 md-col-6">
-            <ul>
+            <ul class="pl2">
                 <li><a href="https://mas.to/@keb">mas.to/@keb</a></li>
                 <li><a href="https://github.com/keb">github.com/keb</a></li>
                 <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
