--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col col-12 md-col-6">
             <ul class="pl2">
-                <li><a href="https://mas.to/@keb">mas.to/@keb</a></li>
+                <li><a href="https://subreply.com/keb">subreply.com/keb</a></li>
                 <li><a href="https://github.com/keb">github.com/keb</a></li>
                 <li><a href="https://keb.itch.io/">keb.itch.io</a></li>
                 <li><a href="https://www.last.fm/user/kebfm">last.fm/user/kebfm</a></li>
