--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,129 +1,1 @@
-@keyframes fade-in { from { opacity: 0; } to { opacity: 1; } }
-.fade-in { animation: fade-in 0.25s; }
-
-body {
-    font-family: monospace;
-    font-size: 17px;
-    background-color: #fdfdfd;
-    color: #313131;
-}
-
-h1, h2, h3, h4, h5, h6 { font-weight: 400; }
-
-.discord-tag {
-    font-size: 0.75em;
-    opacity: 0.35;
-    transition: all 0.1s ease;
-}
-
-.keb-header:hover > .discord-tag { opacity: 1; }
-
-main { padding: 2em; }
-
-.line {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid #dedede;
-}
-
-a {
-    color: #4e5192;
-    text-decoration: none;
-    background-image: linear-gradient(0deg,
-        transparent,
-        transparent 50%,
-        rgba(0, 158, 224, 0.1) 0,
-        rgba(0, 158, 224, 0.1));
-    background-position: 0 -100%;
-    background-size: 100% 200%;
-    transition-property: color, background-position;
-    transition-duration: 150ms;
-    transition-timing-function: ease-in;
-}
-
-a:hover,
-a:focus {
-    color: #5c5fb1;
-    background-position: 0 0;
-    box-shadow: 0 1px 0 #5c5fb1;
-}
-
-ul li { word-wrap: break-word; }
-.light-subdue { color: #9b9b9b; }
-img { max-width: 100%; height: auto; }
-
-pre { padding: 2em; overflow-x: auto; }
-code:not([class]) { font-size: 16px; background: #363636; color: white; padding: 0.15em 0.3em; margin: 0 0.2em; }
-
-.page-content h1 {
-    font-size: 2em;
-}
-
-.page-content p,
-.page-content ul,
-.page-content table {
-    font-family: "Georgia", serif;
-    font-size: 17px;
-    line-height: 28.5px;
-}
-
-.page-content img {
-    max-width: 85%;
-    display: block;
-    margin: 2em auto 2em auto;
-    border: 3px solid rgba(0, 0, 0, 0.2);
-}
-
-hr { border: 0; border-top: 1px solid #dedede; }
-.controls { position: fixed; bottom: 0; right: 0; opacity: 0; }
-.controls:hover { opacity: 1; }
-
-.zola-anchor {
-    position: absolute;
-    margin-left: -1em;
-    opacity: 0.1;
-    border-bottom: 0;
-    box-shadow: 0 0 0;
-}
-
-h1 > .zola-anchor { display: none; }
-
-.zola-anchor:hover,
-h2:hover > .zola-anchor,
-h3:hover > .zola-anchor,
-h4:hover > .zola-anchor,
-h5:hover > .zola-anchor,
-h6:hover > .zola-anchor {
-    opacity: 1;
-    border-bottom: 0;
-    box-shadow: 0 0 0;
-}
-
-.toc ul { margin: 0; padding-right: 0; padding-left: 12px; padding-top: 0.2em; }
-.toc li { text-overflow: ellipsis; overflow-x: hidden; padding-bottom: 0.2em; }
-
-
-@media (max-width: 768px) {
-    main { padding: 1.4em; }
-    .page-content p,
-    .page-content ul,
-    .page-content table {
-        font-size: 16px;
-        line-height: 26.5px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .toc-header { display: none; }
-    .toc {
-        opacity: 0.25;
-        position: fixed;
-        top: 14%;
-        left: 1%;
-        white-space: nowrap;
-        max-width: 15%;
-        max-height: 600px;
-        overflow-y: hidden;
-    }
-    .toc:hover { opacity: 0.8; overflow-y: auto; }
-}
+@keyframes fade-in{from{opacity:0}to{opacity:1}}.fade-in{animation:fade-in 0.25s}body{font-family:monospace;font-size:17px;background-color:#fdfdfd;color:#313131}h1,h2,h3,h4,h5,h6{font-weight:400}.discord-tag{font-size:0.75em;opacity:0.35;transition:all 0.1s ease}.keb-header:hover > .discord-tag{opacity:1}main{padding:2em}.line{margin-top:1rem;margin-bottom:1rem;border-bottom:1px solid #dedede}a{color:#4e5192;text-decoration:none;background-image:linear-gradient(0deg, transparent, transparent 50%, rgba(0, 158, 224, 0.1) 0, rgba(0, 158, 224, 0.1));background-position:0 -100%;background-size:100% 200%;transition-property:color, background-position;transition-duration:150ms;transition-timing-function:ease-in}a:focus,a:hover{color:#5c5fb1;background-position:0 0;box-shadow:0 1px 0 #5c5fb1}ul li{word-wrap:break-word}.light-subdue{color:#9b9b9b}img{max-width:100%;height:auto}pre{padding:2em;overflow-x:auto}code:not([class]){font-size:16px;background:#363636;color:white;padding:0.15em 0.3em;margin:0 0.2em}.page-content h1{font-size:2em}.page-content p,.page-content table,.page-content ul{font-family:"Georgia", serif;font-size:17px;line-height:28.5px}.page-content img{max-width:85%;display:block;margin:2em auto;border:3px solid rgba(0, 0, 0, 0.2)}hr{border:0;border-top:1px solid #dedede}.controls{position:fixed;bottom:0;right:0;opacity:0}.controls:hover{opacity:1}.zola-anchor{position:absolute;margin-left:-1em;opacity:0.1;border-bottom:0;box-shadow:0 0 0}h1 > .zola-anchor{display:none}.zola-anchor:hover,h2:hover > .zola-anchor,h3:hover > .zola-anchor,h4:hover > .zola-anchor,h5:hover > .zola-anchor,h6:hover > .zola-anchor{opacity:1;border-bottom:0;box-shadow:0 0 0}.toc ul{margin:0;padding-right:0;padding-left:12px;padding-top:0.2em}.toc li{text-overflow:ellipsis;overflow-x:hidden;padding-bottom:0.2em}@media (max-width: 768px){main{padding:1.4em}.page-content p,.page-content table,.page-content ul{font-size:16px;line-height:26.5px}}@media (min-width: 1200px){.toc-header{display:none}.toc{opacity:0.25;position:fixed;top:14%;left:1%;white-space:nowrap;max-width:15%;max-height:600px;overflow-y:hidden}.toc:hover{opacity:0.8;overflow-y:auto}}
