--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,24 @@
         <a href="https://github.com/keb/keb.now.sh/new/master/content">new</a>
     </div>
 
-    <header class="flex flex-wrap items-center justify-between">
+    <header class="flex flex-wrap items-center justify-between site-header">
         <div class="col col-12 md-col-3">
             <img src="{{ get_url(path="img/pic.jpg") }}" alt="pic" class="rounded">
         </div>
-        <div class="col col-12 md-col-3">
-            <h1 class="keb-header p0 m0" title="Discord ID">
-                keb<small class="discord-tag">#2245</small>
-            </h1>
-            <a href="mailto:keb@sheev.net">keb@sheev.net</a>
+        <div class="col col-12 md-col-3 site-header__left">
+            <div>
+                <h1 class="keb-header p0 m0" title="Discord ID">
+                    keb<small class="discord-tag">#2245</small>
+                </h1>
+                <a href="mailto:keb@sheev.net">keb@sheev.net</a>
+            </div>
             <br />
-            <br />
-            <a href="/wishlist">wishlist</a>
-            <br />
-            <a href="/backlog">backlog</a>
+            <div>
+                <a href="/wishlist">wishlist</a>
+            </div>
+            <div>
+                <a href="/backlog">backlog</a>
+            </div>
         </div>
         <div class="col col-12 md-col-6">
             <ul class="pl2">
