--- a/templates/archive.html
+++ b/templates/archive.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <header class="h4 py2">
-        <a href="/">keb.now.sh</a>
+        <a href="/">← home</a>
     </header>
     <h1>archive</h1>
     {% set section = get_section(path="_index.md") %}
