--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="controls p1">
-        <a href="https://github.com/keb/keb.now.sh/new/master/content">new</a>
+        <a href="https://github.com/keb/keb.github.io/new/master/content">new</a>
     </div>
 
     <header class="flex flex-wrap items-center justify-between site-header">
