--- a/templates/page.html
+++ b/templates/page.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="controls p1">
-        <a href="https://github.com/keb/keb.now.sh/edit/master/content/{{ page.slug }}.md">edit</a>
+        <a href="https://github.com/keb/keb.github.io/edit/master/content/{{ page.slug }}.md">edit</a>
     </div>
     <header class="h4 py2">
         <a href="/">keb.now.sh</a>
