--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="center max-width-2 mx-auto">
     <p class="h4">
-        <a href="/">keb.now.sh</a>
+        <a href="/">← home</a>
     </p>
     <h1>404</h1>
     <p>page not found</p>
