--- a/templates/page.html
+++ b/templates/page.html
@@ -5,7 +5,7 @@
         <a href="https://github.com/keb/keb.github.io/edit/master/content/{{ page.slug }}.md">edit</a>
     </div>
     <header class="h4 py2">
-        <a href="/">keb.now.sh</a>
+        <a href="/">← home</a>
     </header>
     <small class="h5 p0 m0 light-subdue">
         {{ page.date | date(format="%B %d, %Y", timezone="America/New_York") }}
