--- a/templates/archive.html
+++ b/templates/archive.html
@@ -7,10 +7,10 @@
     <h1>archive</h1>
     {% set section = get_section(path="_index.md") %}
     {% for post in section.pages %}
-        <div class="archive-link">
-            <span>{{ post.date | date(format="%Y.%m.%d", timezone="America/New_York") }}</span>
+        <article class="archive-link">
+            <time datetime="{{ post.date | date(format="%Y-%m-%d", timezone="America/New_York") }}">{{ post.date | date(format="%Y.%m.%d", timezone="America/New_York") }}</time>
             -
-            <span><a href="{{ post.permalink }}">{{ post.title }}</a></span>
-        </div>
+            <header style="display: inline;"><a href="{{ post.permalink }}">{{ post.title }}</a></header>
+        </article>
     {% endfor %}
 {% endblock content %}
