--- a/templates/index.html
+++ b/templates/index.html
@@ -37,21 +37,17 @@
 
     <div class="line"></div>
 
-    {% for post in section.pages | slice(start=0, end=6) %}
-        <article>
-            <header>
-                <h2 class="mb1">
-                    <a href="{{ post.permalink }}">{{ post.title }}</a>
-                </h2>
-            </header>
+    <section class="py1">
+        {% for post in section.pages | slice(start=0, end=6) %}
+            <article class="archive-link">
+                <time datetime="{{ post.date | date(format="%Y-%m-%d", timezone="America/New_York") }}">{{ post.date | date(format="%Y.%m.%d", timezone="America/New_York") }}</time>
+                -
+                <header style="display: inline;"><a href="{{ post.permalink }}">{{ post.title }}</a></header>
+            </article>
+        {% endfor %}
+    <section class="py1">
 
-            <small class="h5 p0 m0 light-subdue">
-                {{ post.date | date(format="%B %d, %Y", timezone="America/New_York") }}
-            </small>
-        </article>
-    {% endfor %}
-
-    <nav class="py3">
+    <nav class="py1">
         <a href="/archive/">archive →</a>
     </nav>
 {% endblock content %}
