--- a/templates/base.html
+++ b/templates/base.html
@@ -31,5 +31,6 @@
         {% block content %}{% endblock content %}
     </main>
     <script src="{{ get_url(path="js/dark-mode-switch.min.js") }}"></script>
+    {% block scripts %}{% endblock scripts %}
 </body>
 </html>
