--- a/templates/gamelib.html
+++ b/templates/gamelib.html
@@ -17,6 +17,7 @@
         </form>
 
         <section class="gamelib">
+            <p style="text-align: center;">Loading Library...</p>
         </section>
     </article>
 
