--- a/templates/gamelib.html
+++ b/templates/gamelib.html
@@ -17,7 +17,7 @@
         </form>
 
         <section class="gamelib">
-            <p style="text-align: center;">Loading Library...</p>
+            <p style="text-align:center;font-family:monospace;">Loading Library...</p>
         </section>
     </article>
 
