--- a/templates/gamelib.html
+++ b/templates/gamelib.html
@@ -13,7 +13,7 @@
             <div class="input-group">
                 <input type="text" name="filter" aria-label="Search Library" placeholder="Search by Name or Store..." class="gamesearch-input">
                 <button class="gamesearch-clear" aria-label="Clear Filter">×</button>
-                <button class="gamesearch-submit">Search</button>
+                <button class="gamesearch-submit" type="submit">Search</button>
             </div>
         </form>
 
