--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,1 +1,377 @@
-body{font-family:monospace;font-size:17px;background-color:#fdfdfd;color:#313131}h1,h2,h3,h4,h5,h6{font-weight:400}.discord-tag{font-size:0.75em;opacity:0.35}.keb-header{font-size:25.5px}.keb-header:hover > .discord-tag{opacity:1}.site-header li + li{margin-top:0.2rem}.bookmarks{margin-top:0.5rem;}.bookmarks div + div{margin-top:0.2rem}main{padding:2em}.line{margin-top:1rem;margin-bottom:1rem;border-bottom:1px solid #dedede}a{color:#4e5192;text-decoration:none}a:focus,a:hover{color:#fdfdfd;background-color:#4e5192}ul li{word-wrap:break-word}.light-subdue{color:#9b9b9b}img{max-width:100%;height:auto}pre{padding:1em;overflow-x:auto}p > code{font-size:16px;background:#2b303b;color:white;padding:0.15em 0.3em}.page-content h1{font-size:2em}.page-content p,.page-content table,.page-content ul{font-family:serif;font-size:17px;line-height:28.5px}.page-content img{max-width:85%;display:block;margin:2em auto;border:3px solid rgba(0, 0, 0, 0.2)}.page-content a:not(.zola-anchor){font-weight:bold;font-family:monospace}.controls{position:fixed;bottom:0;right:0;opacity:0}.controls:hover{opacity:1}.zola-anchor{position:absolute;margin-left:-20px;opacity:0.1;border-bottom:0;box-shadow:0 0 0}h1 > .zola-anchor{display:none}.zola-anchor:hover,h2:hover > .zola-anchor,h3:hover > .zola-anchor,h4:hover > .zola-anchor,h5:hover > .zola-anchor,h6:hover > .zola-anchor{opacity:1;border-bottom:0;box-shadow:0 0 0}.toc ul{margin:0;padding-right:0;padding-left:12px;padding-top:0.2em}.toc li{text-overflow:ellipsis;overflow-x:hidden;padding:0.2em}.archive-link{margin:0.4rem 0;line-height:1.4}input{width:100%;padding:0.5rem;border-style:solid;border-width:1px;border-radius:3px;font-family:monospace;border-color:#959595}button{font-family:monospace;padding:0.5rem 0.8rem;border-style:solid;border-width:1px;border-radius:3px;background-color:#fdfdfd;border-color:#959595;color:#313131}button:hover{background-color:#e3e3e3}button:active{background-color:#c8c8c8;}.input-group{display:flex}.input-group input{border-radius:3px 0 0 3px}.gamesearch-submit{border-radius:0 3px 3px 0;}.game{display:flex;justify-content:space-between;padding:0.25rem;}.game:nth-child(2n+1){background-color: #e8e8e8;}.gamelib{padding:1rem 0}@media (max-width: 768px){main{padding:1.4em}.page-content p,.page-content table,.page-content ul{font-size:16px;line-height:26.5px}}@media (max-width: 1200px){.toc{display:none}}@media (min-width: 1200px){.toc{opacity:0.25;position:fixed;top:14%;left:1%;white-space:nowrap;max-width:15%;max-height:600px;overflow-y:hidden}.toc:hover{opacity:0.8;overflow-y:auto}}.gamesearch-input{border-right-width:0;}.gamesearch-clear{border-left-width:0;border-radius:0;font-size:18px;font-weight:600;line-height:0;}
+/*! Basscss | http://basscss.com | MIT License */
+.h1 {
+    font-size: 2rem;
+}
+.h2 {
+    font-size: 1.5rem;
+}
+.h3 {
+    font-size: 1.25rem;
+}
+.h4 {
+    font-size: 1rem;
+}
+.h5 {
+    font-size: 0.875rem;
+}
+.center {
+    text-align: center;
+}
+.block {
+    display: block;
+}
+.table {
+    display: table;
+}
+.max-width-2 {
+    max-width: 32rem;
+}
+.max-width-3 {
+    max-width: 48rem;
+}
+.m0 {
+    margin: 0;
+}
+.mb1 {
+    margin-bottom: 0.5rem;
+}
+.mt2 {
+    margin-top: 1rem;
+}
+.mx-auto {
+    margin-right: auto;
+}
+.mx-auto {
+    margin-left: auto;
+}
+.p0 {
+    padding: 0;
+}
+.p1 {
+    padding: 0.5rem;
+}
+.pb1 {
+    padding-bottom: 0.5rem;
+}
+.py1 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+.pl2 {
+    padding-left: 1rem;
+}
+.py2 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+.py3 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.col {
+    float: left;
+}
+.col {
+    box-sizing: border-box;
+}
+.col-12 {
+    width: 100%;
+}
+.flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+}
+.flex-wrap {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+.items-center {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    -ms-grid-row-align: center;
+    align-items: center;
+}
+.justify-between {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+.rounded {
+    border-radius: 3px;
+}
+
+/* Main */
+body {
+    font-family: monospace;
+    font-size: 17px;
+    background-color: #fdfdfd;
+    color: #313131;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 400;
+}
+main {
+    padding: 2em;
+}
+a {
+    color: #4e5192;
+    text-decoration: none;
+}
+a:focus,
+a:hover {
+    color: #fdfdfd;
+    background-color: #4e5192;
+}
+ul li {
+    word-wrap: break-word;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+pre {
+    padding: 1em;
+    overflow-x: auto;
+}
+p > code {
+    font-size: 16px;
+    background: #2b303b;
+    color: white;
+    padding: 0.15em 0.3em;
+}
+input {
+    width: 100%;
+    padding: 0.5rem;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    font-family: monospace;
+    border-color: #959595;
+}
+button {
+    font-family: monospace;
+    padding: 0.5rem 0.8rem;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    background-color: #fdfdfd;
+    border-color: #959595;
+    color: #313131;
+}
+button:hover {
+    background-color: #e3e3e3;
+}
+button:active {
+    background-color: #c8c8c8;
+}
+.page-content h1 {
+    font-size: 2em;
+}
+.page-content p,
+.page-content table,
+.page-content ul {
+    font-family: 'Georgia', serif;
+    font-size: 17px;
+    line-height: 28.5px;
+}
+.page-content img {
+    max-width: 85%;
+    display: block;
+    margin: 2em auto;
+    border: 3px solid rgba(0, 0, 0, 0.2);
+}
+.page-content a:not(.zola-anchor) {
+    font-weight: bold;
+    font-family: monospace;
+}
+.controls {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+}
+.controls:hover {
+    opacity: 1;
+}
+.zola-anchor {
+    position: absolute;
+    margin-left: -20px;
+    opacity: 0.1;
+    border-bottom: 0;
+    box-shadow: 0 0 0;
+}
+h1 > .zola-anchor {
+    display: none;
+}
+.zola-anchor:hover,
+h2:hover > .zola-anchor,
+h3:hover > .zola-anchor,
+h4:hover > .zola-anchor,
+h5:hover > .zola-anchor,
+h6:hover > .zola-anchor {
+    opacity: 1;
+    border-bottom: 0;
+    box-shadow: 0 0 0;
+}
+.toc ul {
+    margin: 0;
+    padding-right: 0;
+    padding-left: 12px;
+    padding-top: 0.2em;
+}
+.toc li {
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    padding: 0.2em;
+}
+.archive-link {
+    margin: 0.4rem 0;
+    line-height: 1.4;
+}
+.line {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid #dedede;
+}
+.discord-tag {
+    font-size: 0.75em;
+    opacity: 0.35;
+}
+.keb-header {
+    font-size: 25.5px;
+}
+.keb-header:hover > .discord-tag {
+    opacity: 1;
+}
+.site-header li + li {
+    margin-top: 0.2rem;
+}
+.bookmarks {
+    margin-top: 0.5rem;
+}
+.bookmarks div + div {
+    margin-top: 0.2rem;
+}
+.light-subdue {
+    color: #9b9b9b;
+}
+.input-group {
+    display: flex;
+}
+.input-group input {
+    border-radius: 3px 0 0 3px;
+}
+.gamesearch-submit {
+    border-radius: 0 3px 3px 0;
+}
+.game {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.25rem;
+}
+.game:nth-child(2n+1) {
+    background-color: #e8e8e8;
+}
+.gamelib {
+    padding: 1rem 0;
+}
+.gamesearch-input {
+    border-right-width: 0;
+}
+.gamesearch-clear {
+    border-left-width: 0;
+    border-radius: 0;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 0;
+}
+@media (max-width: 768px) {
+    main {
+        padding: 1.4em;
+    }
+    .page-content p,
+    .page-content table,
+    .page-content ul {
+        font-size: 16px;
+        line-height: 26.5px;
+    }
+}
+@media (max-width: 1200px) {
+    .toc {
+        display: none;
+    }
+}
+@media (min-width: 1200px) {
+    .toc {
+        opacity: 0.25;
+        position: fixed;
+        top: 14%;
+        left: 1%;
+        white-space: nowrap;
+        max-width: 15%;
+        max-height: 600px;
+        overflow-y: hidden;
+    }
+    .toc:hover {
+        opacity: 0.8;
+        overflow-y: auto;
+    }
+}
+
+/*Dark Mode*/
+.dark-mode-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 0.5em;
+}
+.dark-mode-btn {
+    opacity: 20%;
+}
+.dark-mode-btn:hover {
+    opacity: 50%;
+}
+[data-theme="dark"] {
+    background-color: #131313 !important;
+    color: #dfd0d0;
+}
+[data-theme="dark"] a {
+    color: #878fb9;
+}
+[data-theme="dark"] a:hover,
+[data-theme="dark"] a:focus {
+    color: #131313;
+    background-color: #878fb9;
+}
+[data-theme="dark"] .line {
+    border-color: #333;
+}
+[data-theme="dark"] input {
+    color: #dfd0d0;
+    background-color: #131313;
+    border-color: #959595;
+}
+[data-theme="dark"] button {
+    background-color: #131313;
+    color: #dfd0d0;
+    border-color: #959595;
+}
+[data-theme="dark"] button:hover {
+    background-color: #242424;
+}
+[data-theme="dark"] button:active {
+    background-color: #464646;
+}
+[data-theme="dark"] .game:nth-child(2n+1) {
+    background-color: #242424;
+}
